# orquestador

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
orc/: api.py  ciclo.py  cli.py  critico.py  generador.py  render_bridge.py
tests/: prueba_api.py  prueba_ciclo.py  prueba_critico.py  prueba_render_bridge.py  prueba_sanitizador.py
