[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
orc = "orc.cli:main"
orc-serve = "orc.api:serve"

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
python_files = "prueba_*.py"
python_functions = "prueba_*"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["orc*"]
